--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -198,9 +198,10 @@
             }
 
             &__close {
-                .lnr-cross{
+                .lnr-cross {
                     cursor: pointer;
-                    &::before{
+
+                    &::before {
                         color: $yellow;
                         font-size: 20px;
                     }
@@ -310,37 +311,43 @@
     .product {
         &__inner {
             background-color: #f8f8f8;
+            padding-bottom: 25px;
 
             &-content {
                 display: flex;
                 z-index: 99;
             }
         }
-        .arrow{
+
+        .arrow {
             position: absolute;
             border: none;
             background-color: transparent;
             cursor: pointer;
-            span{
+
+            span {
                 font-size: 20px;
             }
         }
-        .prev-arrow{
+
+        .prev-arrow {
             right: 55px;
             top: -40px;
         }
-        .next-arrow{
+
+        .next-arrow {
             right: 30px;
             top: -40px;
         }
     }
-    
+
 
     .aside {
         width: 275px;
         margin-right: 25px;
         margin-top: -30px;
         z-index: 99;
+
         &__menu {
             background-color: #26d2fc;
             text-transform: uppercase;
@@ -489,7 +496,8 @@
         color: #707070;
         text-transform: uppercase;
     }
-    .product__inner-contents{
+
+    .product__inner-contents {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -549,27 +557,34 @@
             }
         }
     }
-    .old-price.hot-price{
+
+    .old-price.hot-price {
         display: block;
     }
-    .product__item-category.hot{
+
+    .product__item-category.hot {
         border-top: 45px solid $yellow;
         border-left: 45px solid transparent;
         display: block;
-        span{
+
+        span {
             color: #333;
         }
     }
-    .product__item-category.new{
+
+    .product__item-category.new {
         display: block;
     }
-    .product__carousel{
+
+    .product__carousel {
         margin-top: 50px;
     }
-    .product__carousel-contents{
+
+    .product__carousel-contents {
         justify-content: flex-start;
         margin-left: -30px;
-        .product__carousel-item{
+
+        .product__carousel-item {
             flex-basis: calc(33.3% - 30px);
             margin-left: 30px;
         }
@@ -577,3 +592,270 @@
 
 
     //end product
+
+    //start brand
+    .brand {
+        background-color: #f8f8f8;
+
+        &__inner {
+            background-color: #eaeaea;
+
+            &-bun {
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: auto;
+                height: 160px;
+                background-color: #fff;
+            }
+
+            &-title {
+                padding: 40px 0 30px;
+                font-weight: 800;
+                font-style: italic;
+                font-size: 22px;
+                color: #333;
+                position: relative;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                .icon-instagram {
+                    margin-right: 10px;
+
+                    &::before {
+                        font-size: 25px;
+                    }
+                }
+
+                a {
+                    font-size: 18px;
+                }
+            }
+
+            &-posts {
+                display: flex;
+                justify-content: space-between;
+                padding-bottom: 50px;
+            }
+
+            &-social {
+                display: flex;
+            }
+        }
+
+        .owl-nav {
+            display: none;
+        }
+
+        &__item {
+            cursor: pointer;
+        }
+
+        &__item-social {
+            width: 33.3%;
+            min-height: 150px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .icon-facebook,
+        .icon-twitter,
+        .icon-pinterest-p {
+            &::before {
+                color: #fff;
+                font-size: 60px;
+            }
+        }
+    }
+
+    .brand__item-face {
+        background-color: #3b5997;
+    }
+
+    .brand__item-twi {
+        background-color: #3fccfd;
+    }
+
+    .brand__item-pint {
+        background-color: #cb2027;
+    }
+
+    //end brand
+
+    //start footer
+    .footer {
+        &__inner {
+            color: #fff;
+
+            &-top {
+                background-color: #373737;
+            }
+
+            &-bottom {
+                background-color: #333333;
+            }
+
+            &-box {
+                display: flex;
+                height: 45px;
+                align-items: center;
+                justify-content: space-between;
+                .header__inner-social{
+                    a{
+                        &::before{
+                            font-size: 15px;
+                        }
+                    }
+                }
+            }
+
+            &-content {
+                padding: 70px 0 60px;
+                display: flex;
+                justify-content: space-between;
+            }
+
+            &-title {
+                font-size: 18px;
+                font-weight: 500;
+                margin-bottom: 30px;
+            }
+
+            &-list {
+                li {
+                    a {
+                        color: #fff;
+                        font-size: 12px;
+                        line-height: 18px;
+                        text-transform: capitalize;
+                    }
+                }
+            }
+
+            &-descr {
+                font-size: 12px;
+                line-height: 18px;
+                margin-bottom: 15px;
+            }
+
+            &-item {
+                width: 100%;
+
+                form {
+                    position: relative;
+
+                    input {
+                        width: 100%;
+                        height: 30px;
+                        padding: 0 75px 0 20px;
+                        background-color: #fff51f;
+                        border: none;
+                        outline: none;
+
+                        &::placeholder {
+                            text-transform: uppercase;
+                            font-size: 12px;
+                            font-weight: 700;
+                            color: rgba(51, 51, 51, .5);
+                        }
+                    }
+
+                    button {
+                        position: absolute;
+                        right: 0;
+                        height: 30px;
+                        text-transform: uppercase;
+                        color: #fff;
+                        background-color: #000;
+                        font-size: 12px;
+                        cursor: pointer;
+                        width: 70px;
+                        border: none;
+                    }
+                }
+            }
+
+            &-pay {
+                margin-top: 45px;
+
+                a {
+                    background-image: url(../img/footer/sprites.png);
+                    background-repeat: no-repeat;
+                    width: 38px;
+                    height: 22px;
+
+                    &+a {
+                        margin-left: 5px;
+                    }
+                }
+            }
+        }
+
+        .item-category {
+            max-width: 120px;
+        }
+
+        .item-form {
+            max-width: 280px;
+        }
+
+        .item-contacts {
+            max-width: 240px;
+
+            .footer__inner-descr {
+                margin-bottom: 5px;
+            }
+        }
+    }
+
+    .bg-pay1 {
+        background: 1px -0;
+    }
+
+    .bg-pay2 {
+        background: -35px -0;
+    }
+
+    .bg-pay3 {
+        background: -71px -0;
+    }
+
+    .bg-pay4 {
+        background: -107px -0;
+    }
+
+    .bg-pay5 {
+        background: -143px -0;
+    }
+
+    .bg-pay6 {
+        background: -179px -0;
+    }
+
+    .footer__inner-contacts {
+        a {
+            color: #fff;
+            font-size: 14px;
+            line-height: 36px;
+            font-weight: 500;
+
+            span {
+                margin-left: 15px;
+                transition: all .3s;
+                -webkit-transition: all .3s;
+                -moz-transition: all .3s;
+                -ms-transition: all .3s;
+                -o-transition: all .3s;
+
+                &:hover {
+                    color: $yellow;
+                }
+            }
+        }
+    }
+    .footer__box-title{
+        font-size: 12px;
+    }
+
+    //end footer
