--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?e1vsor');
-  src:  url('../fonts/icomoon.eot?e1vsor#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?e1vsor') format('truetype'),
-    url('../fonts/icomoon.woff?e1vsor') format('woff'),
-    url('../fonts/icomoon.svg?e1vsor#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?f4h1ks');
+  src:  url('../fonts/icomoon.eot?f4h1ks#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?f4h1ks') format('truetype'),
+    url('../fonts/icomoon.woff?f4h1ks') format('woff'),
+    url('../fonts/icomoon.svg?f4h1ks#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-plus1:before {
+  content: "\e900";
+}
 .icon-plus:before {
   content: "\f067";
 }
