--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,51 +1,103 @@
-html{
+html {
     box-sizing: border-box;
 }
+
 *,
 *::before,
-*::after{
+*::after {
     box-sizing: inherit;
 }
-a{
+
+a {
     display: inline-block;
     color: #333;
     text-decoration: none;
 }
-ul, li{
+
+ul,
+li {
     list-style: none;
     margin: 0;
     padding: 0;
 }
-p{
+
+p {
     margin: 0;
     padding: 0;
 }
-.container{
+
+.container {
     max-width: 1200px;
     padding: 0 15px;
     margin: 0 auto;
 }
-body{
+
+body {
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
     color: #000;
 }
+
 html,
 body {
-	height: 100%;
+    height: 100%;
 }
+
 .wrapper {
-	display: flex;
-	flex-direction: column;
-	min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
 }
+
 .content {
-	flex: 1 0 auto;
+    flex: 1 0 auto;
 }
+
 .footer {
-	flex: 0 0 auto;
+    flex: 0 0 auto;
 }
-.wrapper-bg{
+
+.wrapper-bg {
     background-color: #f8f8f8;
     height: 100%;
+}
+
+.app-descr {
+    font-size: 12px;
+    text-transform: uppercase;
+    line-height: 20px;
+    color: #333;
+    font-weight: 600;
+    margin-right: 15px;
+}
+
+.app-select {
+    border: 1px solid #d8d6d6;
+    padding: 6px 8px;
+    font-size: 12px;
+    color: #666669;
+    text-transform: capitalize;
+    cursor: pointer;
+    outline: none;
+}
+.options__descr-title{
+    color: #353535;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 12px;
+}
+.options-box{
+    padding-bottom: 15px;
+    position: relative;
+    margin-bottom: 24px;
+    &::before{
+        content: '';
+        position: absolute;
+        width: 390px;
+        height: 1px;
+        background-color: #e4e4e4;
+        bottom: 0;
+        right: 8px;
+    }
 }
