--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?f4h1ks');
-  src:  url('../fonts/icomoon.eot?f4h1ks#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?f4h1ks') format('truetype'),
-    url('../fonts/icomoon.woff?f4h1ks') format('woff'),
-    url('../fonts/icomoon.svg?f4h1ks#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?q1nply');
+  src:  url('../fonts/icomoon.eot?q1nply#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?q1nply') format('truetype'),
+    url('../fonts/icomoon.woff?q1nply') format('woff'),
+    url('../fonts/icomoon.svg?q1nply#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-check:before {
+  content: "\e901";
+}
 .icon-plus1:before {
   content: "\e900";
 }
