--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -35,7 +35,8 @@ p {
 body {
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
-    color: #000;
+    color: $text;
+    font-size: 12px;
 }
 
 html,
@@ -101,3 +102,4 @@ body {
         right: 8px;
     }
 }
+
