--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,4 +1,98 @@
 @media(max-width: 1180px) {
+    .app {
+        .aside {
+            display: block;
+            &-tags{
+                margin-top: 40px;
+                padding: 20px;
+                &__box{
+                    div{
+                        padding: 13px 20px;
+                        font-size: 14px;
+                    }
+                }
+            }
+
+            .aside__menu {
+                width: 100%;
+                margin-bottom: 5px;
+                position: inherit;
+
+                &-list {
+                    li {
+                        text-align: center;
+                    }
+                }
+
+                &-title {
+                    justify-content: center;
+
+                    .lnr-chevron-down {
+                        position: absolute;
+                        right: 30px;
+                        display: block;
+                        transition: all .3s;
+                        -webkit-transition: all .3s;
+                        -moz-transition: all .3s;
+                        -ms-transition: all .3s;
+                        -o-transition: all .3s;
+                    }
+                    .active{
+                        transform: rotate(180deg);
+                        -webkit-transform: rotate(180deg);
+                        -moz-transform: rotate(180deg);
+                        -ms-transform: rotate(180deg);
+                        -o-transform: rotate(180deg);
+                        transition: all .3s;
+                        -webkit-transition: all .3s;
+                        -moz-transition: all .3s;
+                        -ms-transition: all .3s;
+                        -o-transition: all .3s;
+}
+                }
+            }
+
+            &__options {
+                &-menu {
+                    display: block;
+                }
+            }
+            &-tags{
+                width: 100%;
+            }
+        }
+        &__inner{
+            &-box{
+                padding: 0 15px;
+                .app__inner-breadcrumb{
+                    li{
+                       font-size: 16px;
+                       &::before{
+                           right: -10px;
+                       }
+                       & + li{
+                           margin-left: 15px;
+                       }
+                    }
+                }
+                .app__inner-back{
+                    a{
+                        font-size: 16px;
+                        &::before{
+                        left: -20px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .app__menu-list,
+    .aside__category-list,
+    .brand__menu-list {
+        display: none;
+    }
+
     .product {
         &__inner {
             .container {
@@ -7,6 +101,11 @@
 
             &-content {
                 display: block;
+            }
+
+            &-box {
+                width: 100%;
+                margin-top: 0;
             }
         }
     }
@@ -29,16 +128,23 @@
             display: none;
         }
     }
-    .product{
-        &__inner{
-            &-box{
+
+    .contacts {
+        .product__inner-content {
+            display: flex;
+        }
+
+        .product__inner-box {
+            width: 70%;
+            overflow-x: inherit;
+            padding: 0 15px;
+        }
+
+        .aside {
+            width: 30%;
+
+            &__menu {
                 width: 100%;
-            }
-            &-contents{
-                justify-content: flex-start;
-            }
-            .product__item{
-                margin: 10px;
             }
         }
     }
@@ -123,7 +229,7 @@
             width: 100%;
             position: absolute;
 
-            &-list {
+            .options__menu-list {
                 transform: translateX(-100%);
                 -webkit-transform: translateX(-100%);
                 -moz-transform: translateX(-100%);
@@ -212,6 +318,61 @@
         }
     }
 }
+@media(max-width: 950px) {
+    .app__inner-products{
+        .product__item{
+            flex-basis: calc(50% - 30px);
+        }
+        .active{
+            flex-basis: calc(100% - 30px);
+        }
+    }
+}
+
+@media(max-width: 850px) {
+    .product__item {
+        flex-basis: calc(50% - 25px);
+    }
+
+    .top__slider {
+        div {
+            .top__slider-item {
+                flex-basis: calc(50% - 25px);
+            }
+        }
+    }
+
+    .product__inner-descr {
+        padding: 0 px 25px 0px 10px;
+    }
+    .app__inner-control{
+        // display: block;
+        height: auto;
+        .control-sort,
+        .control-view,
+        .control-show,
+        .control-pagination{
+            display: block;
+        }
+       .control-show-descr.app-descr{
+           &:last-child{
+               display: none;
+           }
+       }
+       .app-descr{
+           margin-right: 0;
+           margin-bottom: 10px;
+       }
+       .control-view__btns{
+           .icon-th-large,
+           .icon-th-list{
+               &::before{
+                   font-size: 20px;
+               }
+           }
+       }
+    }
+}
 
 @media(max-width: 740px) {
     .footer {
@@ -246,14 +407,87 @@
         text-align: center;
         line-height: 20px;
     }
+    .app{
+        .aside{
+            &-tags{
+                &__title{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    .lnr-chevron-down{
+                        display: block;
+                        transition: all .3s;
+                        -webkit-transition: all .3s;
+                        -moz-transition: all .3s;
+                        -ms-transition: all .3s;
+                        -o-transition: all .3s;
+                    }
+                    .active{
+                        transform: rotate(180deg);
+                        -webkit-transform: rotate(180deg);
+                        -moz-transform: rotate(180deg);
+                        -ms-transform: rotate(180deg);
+                        -o-transform: rotate(180deg);
+                        transition: all .3s;
+                        -webkit-transition: all .3s;
+                        -moz-transition: all .3s;
+                        -ms-transition: all .3s;
+                        -o-transition: all .3s;
+}
+                }
+                &__contents{
+                    display: none;
+                } 
+                &__box{
+                    div{
+                        width: 100%;
+                        margin-right: 0;
+                    }
+                }
+                &__btn{
+                    text-align: center;
+                    font-size: 20px;
+                }
+            }
+        }
+    }
+    .app__inner-control{
+        justify-content: flex-start;
+        .control-sort,
+        .control-show,
+        .control-pagination{
+            flex-basis: calc(33.3% - 30px);
+            margin-right: 30px;
+        }
+        .control-view{
+        display: none;
+       }
+       .control-sort__options,
+       .control-show__options{
+           select{
+               width: 100%;
+               max-width: 100%;
+           }
+       }
+    }
+    
+}
+@media(max-width: 660px) {
+    .app__inner-products{
+        .product__item{
+            flex-basis: calc(100% - 30px);
+        }
+    }
 }
 
 @media(max-width: 600px) {
     .aside {
         flex-wrap: wrap;
+
         &-tags {
             width: 100%;
             margin-bottom: 0;
+
             &+.aside-tags {
                 margin-left: 0px;
             }
@@ -262,6 +496,12 @@
 }
 
 @media(max-width: 580px) {
+    .apparel {
+        .header__inner {
+            height: 450px;
+        }
+    }
+
     .header {
         &__inner {
             position: inherit;
@@ -292,6 +532,85 @@
 
             &-descr {
                 margin-top: 40px;
+            }
+        }
+    }
+
+    .product__item {
+        flex-basis: calc(100% - 25px);
+    }
+
+    .top__slider {
+        .slick-dots {
+            display: flex;
+            margin: 0 auto;
+
+            li {
+                width: 15px;
+                height: 7px;
+                background-color: #e0e0e0;
+                border-radius: 4px;
+                -webkit-border-radius: 4px;
+                -moz-border-radius: 4px;
+                -ms-border-radius: 4px;
+                -o-border-radius: 4px;
+
+                &+li {
+                    margin-left: 10px;
+                }
+
+                button {
+                    border: none;
+                    background-color: transparent;
+                    font-size: 0;
+                }
+            }
+
+            .slick-active {
+                background-color: $yellow;
+            }
+        }
+
+        div {
+            .top__slider-item {
+                flex-basis: calc(100% - 25px);
+            }
+        }
+    }
+    .app{
+        .aside{
+            &-tags{
+                &__box{
+                    div{
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    }
+    .app__inner-box{
+        .app__inner-navigation{
+            display: block;
+            .app__inner-back{
+                // text-align: right;
+                padding-left: 30px;
+                margin-top: 30px;
+            }
+        }
+    }
+    .app__inner-control{
+        display: block;
+        .control-sort,
+        .control-show,
+        .control-pagination{
+            margin-right: 0px;
+            margin-bottom: 20px;
+        }
+        .control-pagination__list{
+            li{
+                a{
+                  padding: 10px 15px;  
+                }
             }
         }
     }
@@ -384,6 +703,39 @@
 
     .footer__box-title {
         font-size: 10px;
+    }
+
+    .brand__inner-social {
+        display: block;
+    }
+
+    .brand__item-social {
+        width: 100%;
+        min-height: 80px;
+        border-radius: 10px 10px 0px 0px;
+        -webkit-border-radius: 10px 10px 0px 0px;
+        -moz-border-radius: 10px 10px 0px 0px;
+        -ms-border-radius: 10px 10px 0px 0px;
+        -o-border-radius: 10px 10px 0px 0px;
+    }
+
+    .brand__inner-bun {
+        display: none;
+    }
+
+    .brand__inner-title {
+        font-size: 18px;
+    }
+
+    .brand {
+
+        .icon-facebook,
+        .icon-twitter,
+        .icon-pinterest-p {
+            &::before {
+                font-size: 45px;
+            }
+        }
     }
 }
 
