--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -2,11 +2,13 @@
     .app {
         .aside {
             display: block;
-            &-tags{
+
+            &-tags {
                 margin-top: 40px;
                 padding: 20px;
-                &__box{
-                    div{
+
+                &__box {
+                    div {
                         padding: 13px 20px;
                         font-size: 14px;
                     }
@@ -37,7 +39,8 @@
                         -ms-transition: all .3s;
                         -o-transition: all .3s;
                     }
-                    .active{
+
+                    .active {
                         transform: rotate(180deg);
                         -webkit-transform: rotate(180deg);
                         -moz-transform: rotate(180deg);
@@ -48,7 +51,7 @@
                         -moz-transition: all .3s;
                         -ms-transition: all .3s;
                         -o-transition: all .3s;
-}
+                    }
                 }
             }
 
@@ -57,29 +60,36 @@
                     display: block;
                 }
             }
-            &-tags{
+
+            &-tags {
                 width: 100%;
             }
         }
-        &__inner{
-            &-box{
+
+        &__inner {
+            &-box {
                 padding: 0 15px;
-                .app__inner-breadcrumb{
-                    li{
-                       font-size: 16px;
-                       &::before{
-                           right: -10px;
-                       }
-                       & + li{
-                           margin-left: 15px;
-                       }
+
+                .app__inner-breadcrumb {
+                    li {
+                        font-size: 16px;
+
+                        &::before {
+                            right: -10px;
+                        }
+
+                        &+li {
+                            margin-left: 15px;
+                        }
                     }
                 }
-                .app__inner-back{
-                    a{
+
+                .app__inner-back {
+                    a {
                         font-size: 16px;
-                        &::before{
-                        left: -20px;
+
+                        &::before {
+                            left: -20px;
                         }
                     }
                 }
@@ -122,6 +132,7 @@
 
         &__menu {
             width: 33%;
+            z-index: 99999;
         }
 
         .header__inner-poster {
@@ -130,22 +141,39 @@
     }
 
     .contacts {
-        .product__inner-content {
-            display: flex;
+        .app__inner-box {
+            padding: 0 25px;
         }
 
-        .product__inner-box {
-            width: 70%;
-            overflow-x: inherit;
-            padding: 0 15px;
+        .header__inner-poster {
+            display: block;
+            width: 100%;
+            height: auto;
+            margin-top: 0;
         }
 
-        .aside {
-            width: 30%;
+        .aside__menu {
+            width: 100%;
+        }
 
-            &__menu {
-                width: 100%;
+        &__inner {
+            &-box {
+                .contacts__inner-form {
+                    width: 50%;
+
+                    form {
+                        width: 100%;
+                    }
+                }
+
+                .contacts__inner-info {
+                    margin-top: 40px;
+                }
             }
+        }
+
+        &-location {
+            width: 50%;
         }
     }
 }
@@ -317,13 +345,20 @@
             }
         }
     }
+    .contacts{
+        .header__inner-poster{
+            display: none;
+        }
+    }
 }
+
 @media(max-width: 950px) {
-    .app__inner-products{
-        .product__item{
+    .app__inner-products {
+        .product__item {
             flex-basis: calc(50% - 30px);
         }
-        .active{
+
+        .active {
             flex-basis: calc(100% - 30px);
         }
     }
@@ -345,32 +380,117 @@
     .product__inner-descr {
         padding: 0 px 25px 0px 10px;
     }
-    .app__inner-control{
+
+    .app__inner-control {
         // display: block;
         height: auto;
+
         .control-sort,
         .control-view,
         .control-show,
-        .control-pagination{
+        .control-pagination {
             display: block;
         }
-       .control-show-descr.app-descr{
-           &:last-child{
-               display: none;
-           }
-       }
-       .app-descr{
-           margin-right: 0;
-           margin-bottom: 10px;
-       }
-       .control-view__btns{
-           .icon-th-large,
-           .icon-th-list{
-               &::before{
-                   font-size: 20px;
-               }
-           }
-       }
+
+        .control-show-descr.app-descr {
+            &:last-child {
+                display: none;
+            }
+        }
+
+        .app-descr {
+            margin-right: 0;
+            margin-bottom: 10px;
+        }
+
+        .control-view__btns {
+
+            .icon-th-large,
+            .icon-th-list {
+                &::before {
+                    font-size: 20px;
+                }
+            }
+        }
+    }
+
+    .contacts {
+        &__inner {
+            &-box {
+                .contacts__inner-location {
+                    margin-left: 0;
+                    width: 100%;
+                    margin-bottom: 30px;
+                    text-align: center;
+
+                    a {
+                        width: fit-content;
+                        display: block;
+                        margin: 0 auto;
+                        padding-bottom: 10px;
+                    }
+
+                    .contacts__inner-subtitle {
+                        margin: 0 auto;
+
+                        span {
+                            float: none;
+                            display: block;
+                            margin: 0;
+                        }
+                    }
+
+                    .contacts__inner-descr {
+                        margin: 0 auto;
+                    }
+                }
+
+                .contacts__inner-info {
+                    flex-direction: column-reverse;
+                }
+
+                .contacts__inner-form {
+                    width: 100%;
+                    padding-right: 0;
+                    margin-bottom: 30px;
+
+                    form {
+                        input {
+                            padding: 10px;
+                        }
+                    }
+
+                    &::before {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+    .contacts__inner{
+        .header__inner-box{
+            display: block;
+        }
+        .header__inner-logo{
+            display: block;
+            text-align: center;
+            background: rgba(255, 245, 31, 0.9);
+            width: 110px;
+            height: 110px;
+            border-radius: 50%;
+            margin: 0 auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img{
+                width: 70px;
+            }
+        }
+        .header__inner-social{
+            display: flex;
+            justify-content: center;
+            margin-top: 30px;
+        }
     }
 }
 
@@ -407,14 +527,16 @@
         text-align: center;
         line-height: 20px;
     }
-    .app{
-        .aside{
-            &-tags{
-                &__title{
+
+    .app {
+        .aside {
+            &-tags {
+                &__title {
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    .lnr-chevron-down{
+
+                    .lnr-chevron-down {
                         display: block;
                         transition: all .3s;
                         -webkit-transition: all .3s;
@@ -422,7 +544,8 @@
                         -ms-transition: all .3s;
                         -o-transition: all .3s;
                     }
-                    .active{
+
+                    .active {
                         transform: rotate(180deg);
                         -webkit-transform: rotate(180deg);
                         -moz-transform: rotate(180deg);
@@ -433,48 +556,56 @@
                         -moz-transition: all .3s;
                         -ms-transition: all .3s;
                         -o-transition: all .3s;
-}
+                    }
                 }
-                &__contents{
+
+                &__contents {
                     display: none;
-                } 
-                &__box{
-                    div{
+                }
+
+                &__box {
+                    div {
                         width: 100%;
                         margin-right: 0;
                     }
                 }
-                &__btn{
+
+                &__btn {
                     text-align: center;
                     font-size: 20px;
                 }
             }
         }
     }
-    .app__inner-control{
+
+    .app__inner-control {
         justify-content: flex-start;
+
         .control-sort,
         .control-show,
-        .control-pagination{
+        .control-pagination {
             flex-basis: calc(33.3% - 30px);
             margin-right: 30px;
         }
-        .control-view{
-        display: none;
-       }
-       .control-sort__options,
-       .control-show__options{
-           select{
-               width: 100%;
-               max-width: 100%;
-           }
-       }
+
+        .control-view {
+            display: none;
+        }
+
+        .control-sort__options,
+        .control-show__options {
+            select {
+                width: 100%;
+                max-width: 100%;
+            }
+        }
     }
-    
+
 }
+
 @media(max-width: 660px) {
-    .app__inner-products{
-        .product__item{
+    .app__inner-products {
+        .product__item {
             flex-basis: calc(100% - 30px);
         }
     }
@@ -577,41 +708,74 @@
             }
         }
     }
-    .app{
-        .aside{
-            &-tags{
-                &__box{
-                    div{
+
+    .app {
+        .aside {
+            &-tags {
+                &__box {
+                    div {
                         width: 100%;
                     }
                 }
             }
         }
     }
-    .app__inner-box{
-        .app__inner-navigation{
+
+    .app__inner-box {
+        .app__inner-navigation {
             display: block;
-            .app__inner-back{
-                // text-align: right;
+
+            .app__inner-back {
                 padding-left: 30px;
                 margin-top: 30px;
             }
         }
     }
-    .app__inner-control{
+
+    .app__inner-control {
         display: block;
+
         .control-sort,
         .control-show,
-        .control-pagination{
+        .control-pagination {
             margin-right: 0px;
             margin-bottom: 20px;
         }
-        .control-pagination__list{
-            li{
-                a{
-                  padding: 10px 15px;  
+
+        .control-pagination__list {
+            li {
+                a {
+                    padding: 10px 15px;
                 }
             }
+        }
+    }
+
+    .contacts {
+        &__inner {
+            &-box {
+                .contacts__inner-location {
+                    .contacts__inner-subtitle {
+                        max-width: 100%;
+                    }
+                }
+            }
+        }
+
+        .app__inner-breadcrumb {
+            display: none;
+        }
+
+        .app__inner-box {
+            .app__inner-navigation {
+                .app__inner-back {
+                    margin-top: 0;
+                }
+            }
+        }
+
+        .app__inner-box {
+            padding: 0 15px;
         }
     }
 }
@@ -630,7 +794,7 @@
         .item-category {
             max-width: 100%;
             margin-top: 15px;
-            border-bottom: 1px solid #fff;
+            border-bottom: 1px solid grey;
             padding-bottom: 15px;
 
             &:first-child {
